--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,79 @@
 plugins {
-    id 'java'
+    id "java-library"
+    id "io.qameta.allure" version "2.11.2"
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+def allureVersion = "2.19.0",
+    selenideVersion = "6.12.2",
+    junitVersion = "5.9.2",
+    ownerVersion = "1.0.12",
+    assertjVersion = "3.9.1",
+    slf4jVersion = "2.0.7"
+
+
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
+    }
 }
 
-test {
+dependencies {
+    testImplementation(
+
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.aeonbits.owner:owner:$ownerVersion",
+//            'com.github.javafaker:javafaker:1.0.2',
+            "org.assertj:assertj-core:$assertjVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
+    )
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Test) {
+
+    systemProperty "chromeoptions.prefs", "intl.accept_languages=ru"
+
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task critical(type: Test) {
+    useJUnitPlatform {
+        includeTags("critical")
+    }
+}
+task normal(type: Test) {
+    useJUnitPlatform {
+        includeTags("normal")
+    }
+}
+
+task any(type: Test) {
+    useJUnitPlatform {
+        includeTags("normal")
+    }
 }
