--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ tasks.withType(Test) {
     systemProperty "chromeoptions.prefs", "intl.accept_languages=ru"
 
     useJUnitPlatform()
-
+    systemProperties(System.getProperties())
     testLogging {
         lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
