--- a/build.gradle
+++ b/build.gradle
@@ -77,3 +77,9 @@ task any(type: Test) {
         includeTags("any")
     }
 }
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
+}
